--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,19 @@
+#spring.application.name=Command-snippet-API
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=hammad
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+## JPA Settings
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#
+#management.endpoints.web.exposure.include=*
+
+# Application Name
 spring.application.name=Command-snippet-API
+
+# PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=hammad
@@ -8,4 +23,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+# Redis Configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+#spring.cache.type=redis
+
+# Expose All Actuator Endpoints (Optional)
 management.endpoints.web.exposure.include=*
