--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,33 @@
-#spring.application.name=Command-snippet-API
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+## PostgreSQL Configuration
+#spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=hammad
 #spring.datasource.driver-class-name=org.postgresql.Driver
-#
-## JPA Settings
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-#
-#management.endpoints.web.exposure.include=*
-
-# Application Name
-spring.application.name=Command-snippet-API
-
-# PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=hammad
-spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+
+# PostgreSQL Configuration
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 # Redis Configuration
-spring.redis.host=localhost
+spring.redis.host=${SPRING_REDIS_HOST}
 spring.redis.port=6379
-#spring.cache.type=redis
+
+
+
+#
+## Redis Configuration
+#spring.redis.host=redis
+#spring.redis.port=6379
 
 # Expose All Actuator Endpoints (Optional)
 management.endpoints.web.exposure.include=*
+
+# Swagger Settings
+springdoc.swagger-ui.operations-sorter=alpha
