--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,22 @@
-## PostgreSQL Configuration
-#spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=hammad
-#spring.datasource.driver-class-name=org.postgresql.Driver
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://postgres-container:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=hammad
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Redis Configuration
+spring.data.redis.host=redis-container
+spring.data.redis.port=6379
 
 # JPA Settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 
-# PostgreSQL Configuration
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Redis Configuration
-spring.redis.host=${SPRING_REDIS_HOST}
-spring.redis.port=6379
-
-
-
-#
-## Redis Configuration
-#spring.redis.host=redis
-#spring.redis.port=6379
-
 # Expose All Actuator Endpoints (Optional)
 management.endpoints.web.exposure.include=*
 
 # Swagger Settings
 springdoc.swagger-ui.operations-sorter=alpha
+
+spring.profiles.active=prod
