--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=sa
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.profiles.active=test
+#spring.profiles.active=test
