--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,10 @@ services:
     image: postgres:latest
     container_name: postgres-container
     restart: always
-    environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+    env_file:
+      - .env.prod
     ports:
-      - "5432:5432"
+      - "5433:5432"
     networks:
       - command-snippet-api_my-network
     volumes:
@@ -18,9 +16,8 @@ services:
     image: redis:latest
     container_name: redis-container
     restart: always
-    environment:
-       REDIS_HOST: ${REDIS_HOST}
-       REDIS_PORT: ${REDIS_PORT}
+    env_file:
+      - .env.prod
     ports:
       - "6379:6379"
     networks:
