--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,11 @@
 # Application property file for production
 
 # PostgreSQL Configuration
-spring.datasource.url=${DB_URL:jdbc:postgresql://postgres-container:5432/postgres}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB-PASSWORD:hammad}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Redis Configuration
-spring.data.redis.host=${REDIS_HOST:redis-container}
-spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
