synching EC2 changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ management.endpoints.web.exposure.include=*
 
 # Swagger Settings
 springdoc.swagger-ui.operations-sorter=alpha
+spring.jackson.serialization.indent-output=true
+
 
