--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,8 @@ services:
     depends_on:
       - postgres-container
       - redis-container
-    environment:
-      - SPRING_PROFILES_ACTIVE=prod
+    env_file:
+      - .env.prod 
     ports:
       - "8080:8080"
     networks:
