--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-          ssh -i ~/.ssh/ec2-deploy-key ubuntu@your-ec2-ip << 'EOF'
+          ssh -i ~/.ssh/ec2-deploy-key ubuntu@65.1.147.2 << 'EOF'
             cd ~/Commander-API
             git pull origin master
             docker compose down
