--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_DEPLOY_KEY }}" > ~/.ssh/ec2-deploy-key
           chmod 600 ~/.ssh/ec2-deploy-key
-          ssh-keyscan -H your-ec2-ip >> ~/.ssh/known_hosts
+          ssh-keyscan -H 65.1.147.2 >> ~/.ssh/known_hosts
 
       - name: Deploy to EC2
         run: |
