--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
-          echo "${{ secrets.EC2_DEPLOY_KEY }}" > ~/.ssh/ec2-deploy-key.pem
+          echo "${{ secrets.EC2_DEPLOY_KEY }}" | base64 --decode > ~/.ssh/ec2-deploy-key.pem
           chmod 600 ~/.ssh/ec2-deploy-key.pem
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
