--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up SSH
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_DEPLOY_KEY }}" | sed 's/\r//g' > ~/.ssh/commander-key.pem
+          printf "%s\n" "${{ secrets.EC2_DEPLOY_KEY }}" > ~/.ssh/commander-key.pem
           chmod 600 ~/.ssh/commander-key.pem
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
           eval "$(ssh-agent -s)"
