--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,11 +16,16 @@ jobs:
       - name: Set up SSH
         run: |
           mkdir -p ~/.ssh
-          printf "%s\n" "${{ secrets.EC2_DEPLOY_KEY }}" > ~/.ssh/commander-key.pem
+          printf "%s\n" "${{ secrets.EC2_DEPLOY_KEY }}" | sed 's/\r//g' > ~/.ssh/commander-key.pem
           chmod 600 ~/.ssh/commander-key.pem
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
           eval "$(ssh-agent -s)"
           ssh-add ~/.ssh/commander-key.pem
+
+      - name: Debug SSH Key
+        run: |
+          ls -l ~/.ssh
+          cat -A ~/.ssh/commander-key.pem | head -n 10
 
       - name: Deploy to EC2
         run: |
