--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,3 +9,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Redis Configuration
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
+
+springdoc.swagger-ui.url=https://commander-api.duckdns.org/v3/api-docs
