--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - master
+      - master  # Change this if your default branch is different
 
 jobs:
   deploy:
@@ -20,28 +20,23 @@ jobs:
           chmod 600 ~/.ssh/commander-key.pem
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-
-      - name: Build Spring Boot JAR
-        run: ./mvnw clean package -DskipTests
-
-      - name: Copy files to EC2
-        run: |
-          scp -i ~/.ssh/commander-key.pem -o StrictHostKeyChecking=no \
-            target/Command-snippet-API-0.0.1-SNAPSHOT.jar \
-            ubuntu@${{ secrets.EC2_HOST }}:~/Commander-API/target/
-
       - name: Deploy to EC2
         run: |
           ssh -i ~/.ssh/commander-key.pem ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
-            set -e
+            set -e  # Stop script on error
+
+            echo "🔹 Fixing Docker permissions on EC2..."
+            sudo usermod -aG docker ubuntu
+            sudo chmod 666 /var/run/docker.sock  # Temporary fix (remove in production)
+            newgrp docker
+
+            echo "🚀 Pulling latest changes..."
             cd ~/Commander-API
             git pull origin master
+
+            echo "🔄 Restarting Docker containers..."
             docker compose down
             docker compose up -d --build
+
             echo "✅ Deployment successful!"
           EOF
