Hotfix: updated docker-compose and prod properties directly on EC2

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,4 +10,15 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
 
-springdoc.swagger-ui.url=https://commander-api.duckdns.org/v3/api-docs
+# API docs served at this path
+springdoc.api-docs.path=/v3/api-docs
+
+# Swagger UI available at this path
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Tell Swagger UI where to find the OpenAPI spec (relative path)
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+
+# Optional: If you added security
+springdoc.swagger-ui.disable-swagger-default-url=false
+
