--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,14 @@ services:
     restart: always
     env_file:
       - .env.prod
+
     ports:
       - "5433:5432"
     networks:
       - command-snippet-api_my-network
     volumes:
       - postgres-data:/var/lib/postgresql/data
+
 
   redis-container:
     image: redis:latest
@@ -24,14 +26,18 @@ services:
       - command-snippet-api_my-network
 
   springboot-app:
-    image: my-springboot-app
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: springboot-app
     restart: always
     depends_on:
       - postgres-container
       - redis-container
     env_file:
-      - .env.prod 
+      - .env.prod
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod 
     ports:
       - "8080:8080"
     networks:
