--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,10 +40,12 @@ jobs:
           ssh -i ~/.ssh/commander-key.pem ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
             set -e
             cd ~/Commander-API
+            echo "📦 Pulling latest code from GitHub..."
             git pull origin master
 
-            echo "🛠️ Rebuilding containers..."
+            echo "🔄 Rebuilding Docker containers..."
             docker compose down
             docker compose up -d --build
-            echo "✅ Done!"
+
+            echo "✅ Deployment complete!"
           EOF
