--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Set up SSH
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_DEPLOY_KEY }}" | sed 's/\r//g' > ~/.ssh/commander-key.pem
-          chmod 600 ~/.ssh/commander-key.pem
+          echo "${{ secrets.EC2_DEPLOY_KEY }}" | sed 's/\r//g' > ~/.ssh/commander-backend-app.pem
+          chmod 600 ~/.ssh/commander-backend-app.pem
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
       - name: Set up JDK 21
@@ -37,7 +37,7 @@ jobs:
 
       - name: Deploy on EC2
         run: |
-          ssh -i ~/.ssh/commander-key.pem ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
+          ssh -i ~/.ssh/commander-backend-app.pem ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
             set -e
             cd ~/Commander-API
             echo "📦 Pulling latest code from GitHub..."
