--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_DEPLOY_KEY }}"> ~/.ssh/commander-backend-app.pem
-          chmod 600 ~/.ssh/commander-backend-app.pem
-          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+      - name: Set up SSH with ssh-agent
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.EC2_DEPLOY_KEY }}
 
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -31,15 +29,16 @@ jobs:
 
       - name: Copy JAR to EC2
         run: |
-          scp -i ~/.ssh/commander-key.pem -o StrictHostKeyChecking=no \
+          scp -o StrictHostKeyChecking=no \
             target/Command-snippet-API-0.0.1-SNAPSHOT.jar \
             ubuntu@${{ secrets.EC2_HOST }}:~/Commander-API/target/
 
       - name: Deploy on EC2
         run: |
-          ssh -i ~/.ssh/commander-backend-app.pem ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
             set -e
             cd ~/Commander-API
+
             echo "📦 Pulling latest code from GitHub..."
             git pull origin master
 
