--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,37 +16,27 @@ jobs:
       - name: Set up SSH
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_DEPLOY_KEY }}"> ~/.ssh/commander-backend-app.pem
+          echo "${{ secrets.EC2_DEPLOY_KEY }}" > ~/.ssh/commander-backend-app.pem
           chmod 600 ~/.ssh/commander-backend-app.pem
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-
-      - name: Build Spring Boot JAR
-        run: ./mvnw clean package -DskipTests
-
-      - name: Copy JAR to EC2
-        run: |
-          scp -i ~/.ssh/commander-backend-app.pem -o StrictHostKeyChecking=no \
-            target/Command-snippet-API-0.0.1-SNAPSHOT.jar \
-            ubuntu@${{ secrets.EC2_HOST }}:~/Commander-API/target/
 
       - name: Deploy on EC2
         run: |
           ssh -i ~/.ssh/commander-backend-app.pem ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
             set -e
+
+            echo "📁 Going to project directory..."
             cd ~/Commander-API
+
             echo "📦 Pulling latest code from GitHub..."
             git pull origin master
 
+            echo "🔨 Building project on EC2..."
+            ./mvnw clean package -DskipTests
+
             echo "🔄 Rebuilding Docker containers..."
-            docker compose down
-            docker compose up -d --build
+            docker compose-down
+            docker compose-up -d --build
 
             echo "✅ Deployment complete!"
           EOF
-
