--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,8 @@ jobs:
             ./mvnw clean package -DskipTests
 
             echo "🔄 Rebuilding Docker containers..."
-            docker compose-down
-            docker compose-up -d --build
+            docker-compose down
+            docker-compose up -d --build
 
             echo "✅ Deployment complete!"
           EOF
