--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
             echo "🔄 Rebuilding Docker containers..."
             docker-compose down
-            docker-compose up -d --build
+            docker-compose up -d --build --no-cache
 
             echo "✅ Deployment complete!"
           EOF
