--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,3 +12,4 @@ spring.data.redis.port=${REDIS_PORT}
 
 springdoc.swagger-ui.url=https://commander-api.duckdns.org/v3/api-docs
 server.forward-headers-strategy=framework
+server.use-forward-headers=true
