--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,3 +12,13 @@ spring.data.redis.port=${REDIS_PORT}
 
 server.forward-headers-strategy=framework
 server.use-forward-headers=true
+# API docs served at this path
+springdoc.api-docs.path=/v3/api-docs
+
+# Swagger UI available at this path
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Tell Swagger UI where to find the OpenAPI spec (relative path)
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+
+
